--- a/index.html
+++ b/index.html
@@ -6,4 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/css/script.css" />
+</head><!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Git it Done</title>
 </head>
+
+<body>
+  <header class="hero">
+    <h1 class="app-title"><i class="fa-solid fa-martini-glass-citrus"></i> Drinkology</h1>
+    <p>Search for drink recipes. Choose one ingredient from the pulldown menu or search using a keyword.
+    </p>
+  </header>
+
+
+  <main>
+
+  </main>
+  <script src="./assets/js/script.js"></script>
+</body>
+
+</html>
