--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/script.css" />
-</head><!DOCTYPE html>
-<html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +6,7 @@
   <link rel="stylesheet" href="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>Git it Done</title>
+  <title>Drinkology</title>
 </head>
 
 <body>
