added so new css through tailwind

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Drinkology</title>
 </head>
 
 <body>
-  <header class="hero">
-    <h1 class="app-title"><i class="fa-solid fa-martini-glass-citrus"></i> Drinkology</h1>
-    <p>Search for drink recipes. Choose one ingredient from the pulldown menu or search using a keyword.
+  <header class="hero bg-cyan-900">
+    <h1 class="app-title bg-gradient-to-t from-rose-400 to-yellow-200 text-slate-700"><i class="fa-solid fa-martini-glass-citrus"></i> Drinkology</h1>
+    <p class="text-rose-400">Search for drink recipes. Choose one ingredient from the pulldown menu or search using a keyword.
     </p>
   </header>
 
