created selector list for liquor

--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
   </header>
 
   <main>
-    
+    <div id="liquor" class="input-field col s12">
+      <select>
+        <option value="" disabled selected>Choose your Liquor</option>
+        <option value="1">Vodka</option>
+        <option value="2">Tequila</option>
+        <option value="3">Rum</option>
+        <option value="3">Gin</option>
+        <option value="3">Whiskey</option>
+      </select>
+      <label>Get A Cocktail Recipe</label>
+    </div>
+   
   </main>
   <script src="./assets/js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
