added a couple of cclasses to help

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="col s12 m6">
         <div id="liquor" class="input-field col s12">
           <h5>Get A Cocktail Recipe</h5>
-          <select>
+          <select class="liqour-selection">
             <option value="" disabled selected>Choose your Liquor</option>
             <option value="1">Vodka</option>
             <option value="2">Tequila</option>
@@ -40,7 +40,7 @@
             <form class="col s12">
               <div class="row">
                 <div class="input-field col s12">
-                  <textarea id="textarea1" class="materialize-textarea"></textarea>
+                  <textarea id="textarea1" class="materialize-textarea food-input"></textarea>
                   <label for="textarea1">Enter a type of dish.</label>
                 </div>
               </div>
