api fetch initial

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 
 
   <main>
+    <div class="font-weight-bold col-3 border col-xs-offset-4">
+      Search for an ingredient:
+      <div class="input-group">
+        <input
+          type="search"
+          class="form-control rounded"
+          placeholder="Search"
+          id="ingredient"
+        />
+        <input type="submit" value="Submit" class="button">search</button>
+      </div>
+    </div>
 
   </main>
   <script src="./assets/js/script.js"></script>
