getting it to display 10 recipes in the browser

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
       </div>
       <div class="col s12 m6">
         <div class="matchCocktailside">
-          <h5>Find a recipe to go with your cocktail!</h5>
           <div class="row">
-            <h5>Search for an Ingredient </h5>
+            <h5>Find a Recipe to go with your cocktail!<br><br> Search for an Ingredient </h5>
                 
                   <input name="ingredientInput" 
                   id="ingredientInput" 
@@ -58,7 +57,7 @@
         <p>This is where the API generated cocktail recipe will display.</p>
       </div>
       <div class="col s12 m6">
-        <p>This is where the API generaged food recipe will display.</p>
+        <p>This is where the API generated food recipe will display.</p>
         <div id = recipeContainer></div>
       </div>
     </div>
