--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>Drinkology</title>
+  <title>Flute and Fork</title>
 </head>
 
 <body>
   <header class="hero">
-    <h1 class="app-title"><i class="fa-solid fa-martini-glass-citrus"></i> Drinkology</h1>
-    <p>Search for drink recipes. Choose one ingredient from the pulldown menu or search using a
-      keyword.
-    </p>
+    <div class="image-and-name">
+      <img class="brand-image" src="./assets/images/flute-fork.png">
+      <h1 class="app-title">
+        Flute<br>and<br>Fork
+      </h1>
+
+      <p>Search for drink recipes. Choose one ingredient from the pulldown menu or search using a
+        keyword.
+      </p>
+    </div>
   </header>
 
   <main>
