--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +24,6 @@
       </p>
     </div>
   </header>
-
   <main>
     <div class="row">
       <div class="col s12 m6">
@@ -71,6 +72,13 @@
       <div class="col s12 m6">
         <p>This is where the API generated food recipe will display.</p>
         <div id=recipeContainer></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m6">
+        <h5 class="storageHeader">Click the button below to display your previous searched ingredients.</h5>
+        <button onclick="displayItems" class="storageBtn">Display</button>
+        <ul class="storedList"></ul>
       </div>
     </div>
   </main>
