--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,13 +19,11 @@
       <h1 class="app-title">
         Flute<br>and<br>Fork
       </h1>
-
       <p>Search for drink recipes. Choose one ingredient from the pulldown menu or search using a
         keyword.
       </p>
     </div>
   </header>
-
   <main>
     <div class="row">
       <div class="col s12 m6">
@@ -47,10 +48,6 @@
             <input name="ingredientInput" id="ingredientInput" type="text" autofocus="true"
               placeholder="Enter an ingredient" />
             <input type="submit" value="Submit" class="button" />
-
-
-
-
           </div>
         </div>
       </div>
@@ -62,6 +59,13 @@
       <div class="col s12 m6">
         <p>This is where the API generated food recipe will display.</p>
         <div id=recipeContainer></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m6">
+        <h5 class="storageHeader">Click the button below to display your previous searched ingredients.</h5>
+        <button onclick="displayItems" class="storageBtn">Display</button>
+        <ul class="storedList"></ul>
       </div>
     </div>
   </main>
