--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     <header class="hero">
       <div class="image-and-name">
         <img class="brand-image" src="./assets/images/flute-fork.png" />
-        <h1 class="app-title"><span class="font-title">
-          Flute</span><br><span class="and">and</span><br><span class="font-title">Fork</span>
+        <h1 class="app-title">
+          <span class="font-title"> Flute</span><br /><span class="and"
+            >and</span
+          ><br /><span class="font-title">Fork</span>
         </h1>
 
-        <p class="text-center">Meal planning made simple!
-        </p>
+        <p class="text-center">Meal planning made simple!</p>
       </div>
     </header>
     <main>
@@ -57,11 +58,10 @@
         <div class="col s12 m6">
           <div class="matchCocktailside">
             <div class="row">
-              <h5>
-                Find a meal recipe to go with your cocktail
-              </h5>
+              <h5>Find a meal recipe to go with your cocktail</h5>
 
-              <input class="search-space browser-default"
+              <input
+                class="search-space browser-default"
                 name="ingredientInput"
                 id="ingredientInput"
                 type="text"
@@ -92,7 +92,7 @@
       <div class="row">
         <div class="col s12 m6">
           <h5 class="storageHeader">
-            Click the button below to display your previous searched
+            Click the button below to display your previously searched
             ingredients.
           </h5>
           <button onclick="displayItems" class="storageBtn">Display</button>
