Getting toasts to pop up with alert messages and also adjusting their positioning

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="col s12 m6">
           <p>This is where the API generated food recipe will display.</p>
-          <div id="recipeContainer"></div>
+          <div id="recipeContainer"><div id="toastContainer" class="toast"></div>
         </div>
       </div>
       <div class="row">
