--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
             Click the button below to display your previously searched
             ingredients.
           </h5>
-          <button onclick="displayItems" class="storageBtn">Display</button>
+          <button id="showIngredients">Display</button>
           <ul class="storedList"></ul>
+          <div id="ingredients"></div>
         </div>
       </div>
     </main>
