--- a/index.html
+++ b/index.html
@@ -4,43 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Syncopate|Caveat|Della Respira:400,400i,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <script
-      src="https://kit.fontawesome.com/91a4da6089.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Syncopate|Caveat|Della Respira:400,400i,700&display=swap" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet"/>
+    <script src="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Flute and Fork</title>
   </head>
   <body>
+
     <header class="hero">
       <div class="image-and-name">
         <img class="brand-image" src="./assets/images/flute-fork.png" />
         <h1 class="app-title">
-          <span class="font-title"> Flute</span><br /><span class="and"
-            >and</span
-          ><br /><span class="font-title">Fork</span>
+          <span class="font-title"> Flute</span><br /><span class="and">
+            and</span><br /><span class="font-title">Fork</span>
         </h1>
-
         <p class="text-center">Meal planning made simple!</p>
       </div>
     </header>
     <main>
       <div class="row">
         <div class="col s12 m6">
-          <div id="liquor" class="input-field col s12">
-            <h5>Find a cocktail recipe</h5>
-            <select
-              id="cocktailIngredient"
-              class="liqour-selection browser-default"
-            >
+          <div id="liquor" class="input-field default-browser col s12">
+            <h4>Find a cocktail recipe</h4>
+            <select id="cocktailIngredient" class="liquor-selection browser-default">
               <option value="" disabled selected>Choose your liquor</option>
               <option value="Vodka">Vodka</option>
               <option value="Tequila">Tequila</option>
@@ -48,8 +35,7 @@
               <option value="Gin">Gin</option>
               <option value="Bourbon">Bourbon</option>
             </select>
-            <input
-              type="submit"
+            <input type="submit"
               value="Click here to search for cocktails"
               class="button_2 waves-effect waves-red btn-medium scale-transition scale-in"
             />
@@ -58,18 +44,16 @@
         <div class="col s12 m6">
           <div class="matchCocktailside">
             <div class="row">
-              <h5>Find a meal recipe to go with your cocktail</h5>
+              <h4>Find a meal recipe to go with your cocktail</h4>
 
-              <input
+              <input type="text"
                 class="search-space browser-default"
                 name="ingredientInput"
                 id="ingredientInput"
-                type="text"
                 autofocus="true"
                 placeholder="Enter an ingredient"
               />
-              <input
-                type="submit"
+              <input type="submit"
                 value="Click here to search for recipes"
                 class="button waves-effect waves-red btn-medium scale-transition scale-in"
               />
