submit buttons are updated

--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
               <option value="Gin">Gin</option>
               <option value="Bourbon">Bourbon</option>
             </select>
-            <input type="submit"
-              value="Click here to search for cocktails"
-              class="button_2 waves-effect waves-red btn-medium scale-transition scale-in"
-            />
+            <button class="button_2 btn waves-effect waves-light" type="submit" name="action">Submit
+              
+            </button>
           </div>
         </div>
         <div class="col s12 m6">
@@ -53,10 +52,9 @@
                 autofocus="true"
                 placeholder="Enter an ingredient"
               />
-              <input type="submit"
-                value="Click here to search for recipes"
-                class="button waves-effect waves-red btn-medium scale-transition scale-in"
-              />
+              <button class=" button btn waves-effect waves-light" type="submit" name="action">Submit
+                
+              </button>
             </div>
           </div>
         </div>
