got both inputs to submit when you hit enter

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <option value="Gin">Gin</option>
               <option value="Bourbon">Bourbon</option>
             </select>
-            <button class="button_2 btn waves-effect waves-light" type="submit" name="action">Submit
+            <button id="liqBtn" class="button_2 btn waves-effect waves-light" type="submit" name="action">Submit
             </button>
           </div>
           <div class="cocktails" id="cocktailContainer"></div>
@@ -51,7 +51,7 @@
                 autofocus="true"
                 placeholder="Enter an ingredient"/>
 
-              <button class="button btn waves-effect waves-light default-browser" type="submit" name="action">Submit
+              <button id="ingredientBtn" class="button btn waves-effect waves-light default-browser" type="submit" name="action">Submit
               </button>
  
           </div>
