--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>Flute and Fork</title>
   </head>
   <body>
-
     <header class="hero">
       <div class="image-and-name">
         <img class="brand-image" src="./assets/images/flute-fork.png" />
@@ -35,7 +34,7 @@
               <option value="Gin">Gin</option>
               <option value="Bourbon">Bourbon</option>
             </select>
-            <button id="liqBtn" class="button_2 btn waves-effect waves-light" type="submit" name="action">Submit
+            <button id="liqBtn" class="button_2 btn waves-effect waves-light z-depth-4" type="submit" name="action">Submit
             </button>
           </div>
           <div class="cocktails" id="cocktailContainer"></div>
@@ -51,7 +50,7 @@
                 autofocus="true"
                 placeholder="Enter an ingredient"/>
 
-              <button id="ingredientBtn" class="button btn waves-effect waves-light default-browser" type="submit" name="action">Submit
+              <button id="ingredientBtn" class="button btn waves-effect waves-light default-browser z-depth-4" type="submit" name="action">Submit
               </button>
  
           </div>
@@ -66,7 +65,7 @@
               Click the button below to display your previously searched
               ingredients.
             </h5>
-            <button class="button" id="showIngredients">Display</button>
+            <button class="button btn waves-effect waves-light z-depth-4" id="showIngredients">Display</button>
             <ul class="storedList"></ul>
             <div id="ingredients"></div>
           </div>
