added a clear button that clears the stored ingredient list

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         <div class="col s12 m6">
           <div class="old-search">
             <h5 class="storageHeader">
-              Click the button below to display your previously searched
+              Click the button below to display or your previously searched
               ingredients.
             </h5>
             <button class="button btn waves-effect waves-light z-depth-4" id="showIngredients">Display</button>
-            <ul class="storedList"></ul>
+            <button class="button btn waves-effect waves-light z-depth-4" id="clearIngredients">Clear</button>
             <div id="ingredients"></div>
           </div>
         </div>
