hope I don't mess something up

--- a/index.html
+++ b/index.html
@@ -34,25 +34,40 @@
               <option value="Gin">Gin</option>
               <option value="Bourbon">Bourbon</option>
             </select>
-            <button id="liqBtn" class="button_2 btn waves-effect waves-light z-depth-4" type="submit" name="action">Submit
+            <button
+              id="liqBtn"
+              class="button_2 btn waves-effect waves-light z-depth-4"
+              type="submit"
+              name="action"
+            >
+              Submit
             </button>
           </div>
           <div class="cocktails" id="cocktailContainer"></div>
         </div>
         <div class="col s12 m6">
           <div class="matchCocktailside">
-              <p class="search-header">Find a meal recipe to go with your cocktail</p>
+            <p class="search-header">
+              Find a meal recipe to go with your cocktail
+            </p>
 
-              <input type="text"
-                class="search-space browser-default"
-                name="ingredientInput"
-                id="ingredientInput"
-                autofocus="true"
-                placeholder="Enter an ingredient"/>
+            <input
+              type="text"
+              class="search-space browser-default"
+              name="ingredientInput"
+              id="ingredientInput"
+              autofocus="true"
+              placeholder="Enter an ingredient"
+            />
 
-              <button id="ingredientBtn" class="button btn waves-effect waves-light default-browser z-depth-4" type="submit" name="action">Submit
-              </button>
- 
+            <button
+              id="ingredientBtn"
+              class="button btn waves-effect waves-light default-browser z-depth-4"
+              type="submit"
+              name="action"
+            >
+              Submit
+            </button>
           </div>
           <div id="recipeContainer"></div>
           <div id="toastContainer" class="toast"></div>
