--- a/index.html
+++ b/index.html
@@ -4,18 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Syncopate|Caveat|Della Respira:400,400i,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/91a4da6089.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Syncopate|Caveat|Della Respira:400,400i,700&display=swap" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet"/>
+    <script src="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Flute and Fork</title>
   </head>
@@ -89,18 +80,8 @@
               Click the button below to display or your previously searched
               ingredients.
             </h5>
-            <button
-              class="button btn waves-effect waves-light z-depth-4"
-              id="showIngredients"
-            >
-              Display
-            </button>
-            <button
-              class="button btn waves-effect waves-light z-depth-4"
-              id="clearIngredients"
-            >
-              Clear
-            </button>
+            <button class="button btn waves-effect waves-light z-depth-4" id="showIngredients">Display</button>
+            <button class="button btn waves-effect waves-light z-depth-4" id="clearIngredients">Clear</button>
             <div id="ingredients"></div>
           </div>
         </div>
