--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Syncopate|Caveat|Della Respira:400,400i,700&display=swap" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet"/>
-    <script src="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Syncopate|Caveat|Della Respira:400,400i,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/91a4da6089.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Flute and Fork</title>
   </head>
@@ -16,7 +25,8 @@
         <img class="brand-image" src="./assets/images/flute-fork.png" />
         <h1 class="app-title">
           <span class="font-title"> Flute</span><br /><span class="and">
-            and</span><br /><span class="font-title">Fork</span>
+            and</span
+          ><br /><span class="font-title">Fork</span>
         </h1>
         <p class="text-center">Meal planning made simple!</p>
       </div>
@@ -26,7 +36,10 @@
         <div class="col s12 m6">
           <div id="liquor" class="input-field default-browser col s12">
             <p class="search-header">Find a cocktail recipe</p>
-            <select id="cocktailIngredient" class="liquor-selection browser-default">
+            <select
+              id="cocktailIngredient"
+              class="liquor-selection browser-default"
+            >
               <option value="" disabled selected>Choose your liquor</option>
               <option value="Vodka">Vodka</option>
               <option value="Tequila">Tequila</option>
@@ -43,7 +56,9 @@
               Submit
             </button>
           </div>
-          <div class="cocktails" id="cocktailContainer"></div>
+          <div class="cocktails" id="cocktailContainer">
+            <div id="liquorToastContainer"></div>
+          </div>
         </div>
         <div class="col s12 m6">
           <div class="matchCocktailside">
@@ -80,8 +95,18 @@
               Click the button below to display or your previously searched
               ingredients.
             </h5>
-            <button class="button btn waves-effect waves-light z-depth-4" id="showIngredients">Display</button>
-            <button class="button btn waves-effect waves-light z-depth-4" id="clearIngredients">Clear</button>
+            <button
+              class="button btn waves-effect waves-light z-depth-4"
+              id="showIngredients"
+            >
+              Display
+            </button>
+            <button
+              class="button btn waves-effect waves-light z-depth-4"
+              id="clearIngredients"
+            >
+              Clear
+            </button>
             <div id="ingredients"></div>
           </div>
         </div>
