--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </button>
           </div>
           <div class="cocktails" id="cocktailContainer">
-            <div id="liquorToastContainer"></div>
+            <div id="liquorToastContainer" class="toast_2"></div>
           </div>
         </div>
         <div class="col s12 m6">
