--- a/index.html
+++ b/index.html
@@ -1,79 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Syncopate|Caveat|Della Respira:400,400i,700&display=swap" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet"/>
-    <script src="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Flute and Fork</title>
-  </head>
-  <body>
-    <header class="hero">
-      <div class="image-and-name">
-        <img class="brand-image" src="./assets/images/flute-fork.png" />
-        <h1 class="app-title">
-          <span class="font-title"> Flute</span><br /><span class="and">
-            and</span><br /><span class="font-title">Fork</span>
-        </h1>
-        <p class="text-center">Meal planning made simple!</p>
-      </div>
-    </header>
-    <main>
-      <div class="row">
-        <div class="col s12 m6">
-          <div id="liquor" class="input-field default-browser col s12">
-            <p class="search-header">Find a cocktail recipe</p>
-            <select id="cocktailIngredient" class="liquor-selection browser-default">
-              <option value="" disabled selected>Choose your liquor</option>
-              <option value="Vodka">Vodka</option>
-              <option value="Tequila">Tequila</option>
-              <option value="Rum">Rum</option>
-              <option value="Gin">Gin</option>
-              <option value="Bourbon">Bourbon</option>
-            </select>
-            <button id="liqBtn" class="button_2 btn waves-effect waves-light z-depth-4" type="submit" name="action">Submit
-            </button>
-          </div>
-          <div class="cocktails" id="cocktailContainer"></div>
-        </div>
-        <div class="col s12 m6">
-          <div class="matchCocktailside">
-              <p class="search-header">Find a meal recipe to go with your cocktail</p>
 
-              <input type="text"
-                class="search-space browser-default"
-                name="ingredientInput"
-                id="ingredientInput"
-                autofocus="true"
-                placeholder="Enter an ingredient"/>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link
+    href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Syncopate|Caveat|Della Respira:400,400i,700&display=swap"
+    rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/91a4da6089.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Flute and Fork</title>
+</head>
 
-              <button id="ingredientBtn" class="button btn waves-effect waves-light default-browser z-depth-4" type="submit" name="action">Submit
-              </button>
- 
-          </div>
-          <div id="recipeContainer"></div>
-          <div id="toastContainer" class="toast"></div>
+<body>
+  <header class="hero">
+    <div class="image-and-name">
+      <img class="brand-image" src="./assets/images/flute-fork.png" />
+      <h1 class="app-title">
+        <span class="font-title"> Flute</span><br /><span class="and">
+          and</span><br /><span class="font-title">Fork</span>
+      </h1>
+      <p class="text-center">Meal planning made simple!</p>
+    </div>
+  </header>
+  <main>
+    <div class="row">
+      <div class="col s12 m6">
+        <div id="liquor" class="input-field default-browser col s12">
+          <p class="search-header">Find a cocktail recipe</p>
+          <select id="cocktailIngredient" class="liquor-selection browser-default">
+            <option value="" disabled selected>Choose your liquor</option>
+            <option value="Vodka">Vodka</option>
+            <option value="Tequila">Tequila</option>
+            <option value="Rum">Rum</option>
+            <option value="Gin">Gin</option>
+            <option value="Bourbon">Bourbon</option>
+          </select>
+          <button id="liqBtn" class="button_2 btn waves-effect waves-light z-depth-4" type="submit" name="action">Submit
+          </button>
+        </div>
+        <div class="cocktails" id="cocktailContainer"></div>
+      </div>
+      <div class="col s12 m6">
+        <div class="matchCocktailside">
+          <p class="search-header">Find a meal recipe to go with your cocktail</p>
+
+          <input type="text" class="search-space browser-default" name="ingredientInput" id="ingredientInput"
+            autofocus="true" placeholder="Enter an ingredient" />
+
+          <button id="ingredientBtn" class="button btn waves-effect waves-light default-browser z-depth-4" type="submit"
+            name="action">Submit
+          </button>
+
+        </div>
+        <div id="recipeContainer"></div>
+        <div id="toastContainer" class="toast"></div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="old-search">
+          <h5 class="storageHeader">
+            Click the button below to display or your previously searched
+            ingredients.
+          </h5>
+          <button class="button btn waves-effect waves-light z-depth-4" id="showIngredients">Display</button>
+          <button class="button btn waves-effect waves-light z-depth-4" id="clearIngredients">Clear</button>
+          <div id="ingredients"></div>
         </div>
       </div>
-      <div class="row">
-        <div class="col s12 m6">
-          <div class="old-search">
-            <h5 class="storageHeader">
-              Click the button below to display or your previously searched
-              ingredients.
-            </h5>
-            <button class="button btn waves-effect waves-light z-depth-4" id="showIngredients">Display</button>
-            <button class="button btn waves-effect waves-light z-depth-4" id="clearIngredients">Clear</button>
-            <div id="ingredients"></div>
-          </div>
-        </div>
-      </div>
-    </main>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="./assets/js/script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </body>
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="./assets/js/script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</body>
+
 </html>
