--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </header>
   <main>
     <div class="row">
+      <!-- cocktail search section -->
       <div class="col s12 m6">
         <div id="liquor" class="input-field default-browser col s12">
           <p class="search-header">Find a cocktail recipe</p>
@@ -43,29 +44,28 @@
         </div>
         <div class="cocktails" id="cocktailContainer"></div>
       </div>
+      <!-- food recipe search section -->
       <div class="col s12 m6">
         <div class="matchCocktailside">
           <p class="search-header">Find a meal recipe to go with your cocktail</p>
-
           <input type="text" class="search-space browser-default" name="ingredientInput" id="ingredientInput"
             autofocus="true" placeholder="Enter an ingredient" />
-
           <button id="ingredientBtn" class="button btn waves-effect waves-light default-browser z-depth-4" type="submit"
             name="action">Submit
           </button>
-
         </div>
         <div id="recipeContainer"></div>
         <div id="toastContainer" class="toast"></div>
       </div>
     </div>
   </main>
+  <!-- past search results section -->
   <footer>
     <div class="row">
       <div class="col s12 m6">
         <div class="old-search">
           <h5 class="storageHeader">
-            Click the button below to display or your previously searched
+            Click the button below to display or clear your previously searched
             ingredients.
           </h5>
           <button class="button btn waves-effect waves-light z-depth-4" id="showIngredients">Display</button>
